[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperseg"
version = "0.1.0"
description = "Audio segmentation tool using Whisper"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Nianlong Gu", email = "nianlonggu@gmail.com"}
]
dependencies = [
    "transformers==4.46.3",
    "peft==0.13.2",
    "accelerate==1.1.1",
    "bitsandbytes==0.44.1",
    "datasets==3.1.0",
    "numpy==2.0.2",
    "scipy==1.14.1",
    "wandb",
    "nltk",
    "ctranslate2==4.5.0",
    "ipykernel==6.29.5",
    "sentencepiece==0.2.0",
    "librosa==0.10.2.post1",
    "ipywidgets==8.1.5",
    "matplotlib==3.9.3",
    "moviepy==2.1.1",
    "flask",
    "flask-cors",
    "streamlit",
    "plotly==5.24.1",
    "evaluate==0.4.3",
    "jiwer",
    "streamlit-elements",
    "streamlit-autorefresh",
    "gputil",
    "chardet"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["whisperseg*"]

[tool.setuptools.package-data]
whisperseg = ["assets/*"]

[project.scripts]
whisperseg-segment = "whisperseg.segment:main"
whisperseg-train = "whisperseg.scripts.train_launcher:main"
whisperseg-server = "whisperseg.scripts.server:main"
whisperseg-gui = "whisperseg.scripts.gui_launcher:main"